Revision history for autodie

2.04  Thu Jul  2 18:56:57 AUSEST 2009

        * TEST: Removed spurious warning about insufficient credit.

        * TEST: hints.t produces less debugging output when testing
          the Perl core.  (Thanks to Jerry D. Hedden)

        * TEST: hints.t no longer spuriously fails when checking
          the return values from File::Copy under Windows before
          Perl 5.10.1.  (Thanks to Curtis Jewell)

2.03  Wed Jul  1 15:39:16 AUSEST 2009

        * BUGFIX: Stopped blog_hints.t from booching under Perl
          5.8.x. because parent.pm is not installed.

2.02  Wed Jul  1 15:06:21 AUSEST 2009

        * FEATURE: autodie::exception now supports ->context() to
          discover the context of the failing subroutine, and
          ->return() to get a list of what it returned.

        * BUGFIX: ->function from autodie::exception now returns
          the original name of the dying sub, rather than its imported
          name.  For example, 'File::Copy::copy' rather than 'main::copy'.
          Core functions continue to always return 'CORE::whatever'.

        * TEST: blog_hints.t tests new hinting features against
          examples in my blog at http://pjf.id.au/blog/

2.01  Wed Jul  1 01:31:24 AUSEST 2009

        * DOCUMENTATION: General copyediting and tidy-up
          (Thanks to Toby Corkindale)

        * BUGFIX: Warnings are no longer emitted when undefined values
          are compared by hinting routines.

        * BUGFIX: Hints for File::Copy now operate correctly under
          Perl 5.10.1.

        * BUGFIX: Inheritance is now considered sufficient to declare
          allegiance to the hints provider role under Perl 5.8.x.
          (Thanks to Glenn Fowler)

        * TEST: hints.t no longer throws failures under Perl 5.10.1.

        * TEST: pod-coverage.t (author test) no longer fails if
          Sub::Identify is not installed.
          (Thanks to Jonathan Yu. RT #47437)

2.00  Mon Jun 29 01:24:49 AUSEST 2009
